BUGFIX: Prevent header from overlapping content

--- a/Resources/Private/Styles/_Navigation.scss
+++ b/Resources/Private/Styles/_Navigation.scss
@@ -1,5 +1,6 @@
 // Wrap for first and second level navigation at the top
 .top-navigation-wrap {
+	position: fixed;
 	background-color: $white;
 	background-color: rgba(255, 255, 255, 0.92);
 	transition: box-shadow 0.2s linear;
